Fix goat photo alignment

--- a/src/components/goats.module.css
+++ b/src/components/goats.module.css
@@ -5,10 +5,8 @@
 
 .goat {
 	border-top: 8px solid #4C2851;
-	display: flex;
-	flex-direction: row;
 	background-color: #fff;
-	align-items: start;
+	text-align: left;
 }
 
 .goat + .goat {
@@ -17,13 +15,17 @@
 
 .photo {
 	margin-bottom: 0;
+	display: inline-block;
+	width: 33%;
+	max-width: 380px;
+	vertical-align: middle;
 }
 
 .content {
-	padding-top: 34px;
-	padding-left: 41px;
-	padding-right: 100px;
+	display: inline-block;
+	padding: 34px 34px 0 34px;
 	text-align: left;
+	vertical-align: top;
 }
 
 .list {
